--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,28 @@
 
 /* CSS Variables */
 
+/* Navigation */
+#navbar {
+    background-color: #fff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+#navbar a {
+    color: var(--primary-color);
+}
+
+#navbar .nav-link {
+    color: var(--primary-color);
+}
+
+#navbar .nav-link:hover {
+    color: var(--highlight-color);
+}
+
+#navbar .active {
+    text-decoration: underline;
+}
+
 main {
     flex: 1 0 auto;
     margin-top: 47px;
@@ -9,7 +31,7 @@ main {
 
 /* Header */
 .hero {
-    background: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.2)), url('../images/South_Coast_03.jpg') left center/cover no-repeat scroll;
+    background: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.2)), url('assets/css/images/house-coast-cliff-sea-shore-path-grass-plants-cabin-sea-clou-webp') left center/cover no-repeat scroll;
     padding: 8rem 0;
 }
 
