--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,3 +44,17 @@ nav {
     }
       
 }
+
+/* Header */
+.hero {
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2)), url('../images/hero.png') left center/cover no-repeat scroll;
+    padding: 6rem 0;
+}
+
+.hero h1 {
+    color: #fff;
+}
+
+.hero p {
+    color: #fff;
+}
