--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,6 +34,14 @@
     color: #fff;
 }
 
+/*container*/
+.container {
+    border: 2px solid #A55318;
+    border-color: #A55318;
+    padding: 20px;
+    border-radius: 10px;
+}
+
 /*cards*/
 
 .card {
