--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,7 @@
 /* Header */
 .hero {
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2)), url('../images/hero.png') left center/cover no-repeat scroll;
-    padding: 6rem 0;
+    padding: 10rem 0;
 }
 
 .hero h1 {
@@ -55,3 +55,46 @@
     text-align: left;
 }
 
+.button {
+    border: black;
+}
+
+#portrait {
+    border-radius: 50%;
+}
+
+/*contact*/
+
+#contact {
+    background-color: var(--primary-color);
+    color: white;
+    padding-bottom: 3rem;
+}
+
+#contact h2 {
+    color: white;
+}
+
+#contact .sub-heading-color {
+    color: var(--highlight-color-light);
+}
+
+#contact i {
+    color: var(--secondary-color);
+    font-size: 1.2rem;
+    margin-right: 15px;
+}
+
+#contact .social-links i {
+    color: var(--highlight-color-light);
+    font-size: 1.9rem;
+    transition: color 0.3s ease-in-out;
+}
+
+#contact .social-links i:hover {
+    color: var(--secondary-color);
+}
+
+#contact .table-dark * {
+    background-color: transparent;
+}
