--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,20 +67,11 @@
 
 /*gallery*/
 
-gallery {
+.gallery {
    margin: 5px;
   border: 1px solid #ccc;
   float: left;
-  width: 180px;
-}
-
-div.gallery:hover {
-  border: 1px solid #777;
-}
-
-div.gallery img {
-  width: 100%;
-  height: auto;
+  width: 220px;
 }
 
 div.desc {
