--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,7 @@
 /* Header */
 .hero {
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2)), url('../images/hero.png') left center/cover no-repeat scroll;
-    padding: 10rem 0;
+    padding: 10rem 3;
 }
 
 .hero h1 {
@@ -43,9 +43,11 @@
 
 /*intro*/
 #intro {
+    border: 2px;
     background-color: var(--tertiary-color);
     color: white;
     padding: 3rem 0;
+    margin-top: auto;
 }
 
 /*container*/
@@ -80,12 +82,7 @@
 
 /*gallery*/
 
-.gallery {
-   margin: 5px;
-  border: 1px solid #ccc;
-  float: left;
-  width: 220px;
-}
+
 
 div.desc {
   padding: 15px;
