--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,6 +48,7 @@
     color: white;
     padding: 3rem 0;
     margin-top: auto;
+    font-family: var(--primary-font);
 }
 
 /*container*/
@@ -77,7 +78,7 @@
 }
 
 #portrait {
-    border-radius: 50%;
+    border-radius: 20%;
 }
 
 /*gallery*/
