--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -138,3 +138,25 @@ div.desc {
 #contact .table-dark * {
     background-color: transparent;
 }
+
+/* Hero */
+header#home.header.hero {
+    padding: 50px 0;
+    margin-bottom: 20px;
+    position: relative;
+}
+
+header#home .container-fluid.text-center .row div h1 {
+    font-family: var(--primary-font);
+}
+
+header#home .social-media-box a {
+    margin: 0 10px;
+    color: #fff;
+    font-size: 1.5rem;
+    transition: color 0.3s ease-in-out;
+}
+
+header#home .social-media-box a:hover {
+    color: var(--primary-color);
+}
