--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,15 +91,20 @@
 /* Carousel */
 
 #carouselExampleRide {
-    max-width: 600px; /* Adjust the width as needed */
-    height; 400px; /* Center the carousel */
+    max-width: 200px; /* Adjust the width as needed */
+    height; 100px; /* Center the carousel */
     margin: auto; /* Center the carousel */
     overflow: hidden; /* Hide overflow to prevent size changes */
 }
 
+#carouselExampleRide .carousel-inner {
+    width: 100%;
+    height: 100%;
+}
+
 #carouselExampleRide .carousel-inner img {
     width: 100%; /* Ensure images take the full width of the carousel */
-    height: 800px; /* Adjust the height as needed */
+    height: 100%; /* Ensure images take the full height of the carousel */
     object-fit: cover; /* Ensure images cover the container without distortion */
 }
 
