--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,7 +92,7 @@
 
 #carouselExampleRide {
     max-width: 200px; /* Adjust the width as needed */
-    height; 100px; /* Center the carousel */
+    height; 100px; 
     margin: auto; /* Center the carousel */
     overflow: hidden; /* Hide overflow to prevent size changes */
 }
