--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,6 +86,24 @@
 
 #portrait {
     border-radius: 100%;
+    padding: 2px;
+    margin: 20px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.card-img-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 200px; /* Adjust the height as needed */
+}
+
+.card-img-container img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
 }
 
 /* Carousel */
