--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,13 +93,6 @@
     margin-right: auto;
 }
 
-.card-img-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 200px; /* Adjust the height as needed */
-}
-
 .card-img-container img {
     max-width: 100%;
     max-height: 100%;
@@ -146,6 +139,29 @@
     background-color: white; /* Change the color of the active indicator */
 }
 
+
+/*links*/
+
+#links .container {
+    padding: 20px 0; /* Add padding to the container */
+}
+
+#links .row {
+    margin-bottom: 20px; /* Add margin to the bottom of the row */
+}
+
+#links img {
+    margin-bottom: 10px; /* Add margin to the bottom of the images */
+}
+
+#links h6 {
+    margin-top: 10px; /* Add margin to the top of the headings */
+}
+
+
+
+
+
 /*contact*/
 
 
@@ -174,16 +190,16 @@
 
 /* contact */
 
-#contact {
+#address {
     background-color: var(--primary-color);
     padding-bottom: 3rem;
 }
 
-#contact h2 {
+#address h2 {
     color: white;
 }
 
-#contact .sub-heading-color {
+#address .sub-heading-color {
     color: var(--highlight-color-light);
 }
 
