--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -201,13 +201,11 @@
 /* contact */
 
 #address {
-    background-color: var(--primary-color);
+    background-color: #bca99f;
     padding-bottom: 3rem;
     padding-top: 3rem;
     font-family: var(--secondary-font);
     font-size: 1rem;
 }
 
-#address .sub-heading-color {
-    color: var(--highlight-color-light);
-}
+
