new images for gallery

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,11 +77,6 @@
     border: none;
 }
 
-#howz {
-    color: var(--primary-color);
-    text-align: left;
-}
-
 .button {
     border: black;
 }
@@ -101,25 +96,14 @@
     object-fit: cover;
 }
 
-/* Carousel */
+/* Gallery */
 
-/* Carousel */
-#carouselExampleRide {
-    max-width: 400px; /* Adjust the width as needed */
-    max-height: 300px; 
-    margin: auto; /* Center the carousel */
-    overflow: hidden; /* Hide overflow to prevent size changes */
-}
-
-#carouselExampleRide .carousel-inner {
-    width: 100%;
-    height: 100%;
-}
-
-#carouselExampleRide .carousel-inner img {
-    width: 100%; /* Ensure images take the full width of the carousel */
-    height: 100%; /* Ensure images take the full height of the carousel */
+#photos img {
+    width: 100%; /* Ensure images take the full width of the column */
+    height: 200px; /* Maintain aspect ratio */
     object-fit: cover; /* Ensure images cover the container without distortion */
+    border-radius: 10px; /* Add border radius for rounded corners */
+    margin-bottom: 15px; /* Add margin to the bottom of the images */
 }
 
 /*links*/
