--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
     --primary-color:  hsl(25, 75%, 37%); 
     --secondary-color: black;
     --tertiary-color: #b7bdd2;
-  }
+}
 
 
 /* Navbar */
@@ -19,6 +19,32 @@
 #navbar {
     font-family: var(--primary-font);
     color: white;
+}
+
+/* Ensure nav items are displayed correctly on mobile */
+.navbar-nav {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.nav-item {
+    margin: 5px 0;
+}
+
+.nav-link {
+    color: white;
+    text-align: center;
+    width: 100%;
+}
+
+/* Media query for mobile devices */
+@media (max-width: 767px) {
+    .navbar-collapse {
+        display: flex !important;
+        flex-direction: column;
+        align-items: center;
+    }
 }
 
 /* Header */
